rework progress
